--- a/lesson_5/index.html
+++ b/lesson_5/index.html
@@ -36,17 +36,18 @@
 				Distinctively re-engineer revolutionary meta service and premium architectures incubate intuitive
 				opportunities and real-time potentialities. Appropriately communicates once one technology after
 				plug-and-play networks.
-
+			</p>
+			<p>
 				Quickly aggregates users and worldwides potentialities progressively plagiarize resource leveling e-commerce
 				through resource leveling cores competencies dramatically mesh low risk high yield alignments before
 				transparent e-tailers.
 			</p>
 		</div>
-		<ol class="list">
+		<ul class="list">
 			<li>the printing and typesetting industry.</li>
 			<li>Lorem Ipsum has been the industry's standard </li>
 			<li>It has survived not only five centuries.</li>
-		</ol>
+		</ul>
 		<div class="text">
 			<p>
 				Compellingly embrace empowered e-business after user friendly intellectual capitals Interactively actualize
@@ -55,11 +56,11 @@
 				completely ethical communities.
 			</p>
 		</div>
-		<ul class="list">
-			<li>01. the printing and typesetting industry.</li>
-			<li>02. Lorem Ipsum has been the industry's standard</li>
-			<li>03. It has survived not only five centuries.</li>
-		</ul>
+		<ol class="list">
+			<li>the printing and typesetting industry.</li>
+			<li>Lorem Ipsum has been the industry's standard</li>
+			<li>It has survived not only five centuries.</li>
+		</ol>
 		<div class="text">
 			<p>
 				Compellingly embrace empowered e-business after user friendly intellectual capitals Interactively actualize
