--- a/lesson_7/index.html
+++ b/lesson_7/index.html
@@ -17,144 +17,148 @@
 		<div class="block">
 			<div class="titles">
 				<h4 class="title-text">Template Information</h4>
-				<h2 class="title-block">Licencing</h2>
+				<h2 id="top" class="title-block">Licencing</h2>
 			</div>
+			<h3 class="icons-name">Icons & Graphics</h3>
 			<div class="icons-text">
-				<h3 class="icons-name">Icons & Graphics</h3>
 				<p>
 					Icons and Graphics were manually designed by the VictorFlow team. You may download these and edit them to
 					fit your website without asking for permission or providing credit.
 				</p>
-				<h5 class="icons-link">
-					Phosphor Icons: <span class="link">License</span>
-				</h5>
-				<div class="ptotography-text">
-					<h3 class="photography-name">
-						Photography
-					</h3>
-					<p>
-						All images used in the WhiteCollar Webflow Template are licensed for free personal and commercial use.
-						If
-						you'd like to use any specific image, you can check the licenses and download the images for free on
-						Unsplash, Pexels.
-					</p>
-				</div>
-				<div class="color-text">
-					<h5 class="pixels-link">
-						Pexels: <span class="link">License</span>
-					</h5>
-					<p>
-						Image 1,Image 2,Image 3,Image 4,Image 5,Image 6,Image 7,Image 8,Image 9,Image 10,Image 11,Image
-						12,Image
-						13,Image 14,Image 15,Image 16,Image 17,Image 18,Image 19,Image 20
-					</p>
-				</div>
-				<div class="splash-text">
-					<h5 class="splash-link">
-						Unsplash: <span class="link">License</span>
-					</h5>
-					<p>
-						Image 1,Image 2,Image 3,Image 4,Image 5,Image 6,Image 7,Image 8,Image 9,Image 10,Image 11,Image
-						12,Image 13,Image 14,Image 15,Image 16,Image 17
-					</p>
-				</div>
-				<div class="fonts-text">
-					<h3 class="fonts-name">
-						Fonts
-					</h3>
-					<p>
-						WhiteCollar template uses free licensed <span class="fonts">Google Fonts</span>. Please check <span
-							class="fonts">Poppins</span>
-						and <span class="fonts">Inter</span>.
-					</p>
-				</div>
+			</div>
+			<h5 class="icons-link">
+				Phosphor Icons: <span class="link">License</span>
+			</h5>
+			<h3 class="photography-name">
+				Photography
+			</h3>
+			<div class="ptotography-text">
+				<p>
+					All images used in the WhiteCollar Webflow Template are licensed for free personal and commercial use.
+					If
+					you'd like to use any specific image, you can check the licenses and download the images for free on
+					Unsplash, Pexels.
+				</p>
+			</div>
+			<h5 class="pixels-link">
+				Pexels: <span class="links">License</span>
+			</h5>
+			<div class="color-text">
+				<p>
+					Image 1,Image 2,Image 3,Image 4,Image 5,Image 6,Image 7,Image 8,Image 9,Image 10,Image 11,Image
+					12,Image
+					13,Image 14,Image 15,Image 16,Image 17,Image 18,Image 19,Image 20
+				</p>
+			</div>
+			<h5 class="splash-link">
+				Unsplash: <span class="link">License</span>
+			</h5>
+			<div class="splash-text">
+				<p>
+					Image 1,Image 2,Image 3,Image 4,Image 5,Image 6,Image 7,Image 8,Image 9,Image 10,Image 11,Image
+					12,Image 13,Image 14,Image 15,Image 16,Image 17
+				</p>
+			</div>
+			<h3 class="fonts-name">
+				Fonts
+			</h3>
+			<div class="fonts-text">
+				<p>
+					WhiteCollar template uses free licensed <span class="fonts">Google Fonts</span>. Please check <span
+						class="fonts">Poppins</span>
+					and <span class="fonts">Inter</span>.
+				</p>
 			</div>
 		</div>
 		<!-- ==================== 2-nd part==================== -->
 
 		<div class="second-block">
-			<div class="project-block">
-				<h2 class="project">Project Information</h2>
-				<p>Distinctively re-engineer revolutionary meta service and premium architectures incubate intuitive
-					opportunities and real-time potentialities. Appropriately communicates once one technology after
-					plug-and-play networks.
-				</p>
-				<p>Quickly aggregates users and worldwides potentialities progressively plagiarize resource leveling
-					e-commerce through resource leveling cores competencies dramatically mesh low risk high yield alignments
-					before transparent e-tailers.
-				</p>
-				<ol class="printing">
-					<li>the printing and typesetting industry.</li>
-					<li>Lorem Ipsum has been the industry's standard</li>
-					<li>It has survived not only five centuries.</li>
-				</ol>
-				<p>
-					Compellingly embrace empowered e-business after user friendly intellectual capitals Interactively
-					actualize front-end processes with effectives convergenced Synergistically deliver performanced based
-					methods empowerment whereas distributed expertised efficiently enable enabled sources and cost effective
-					products completely ethical communities.
-				</p>
-				<ul class="printing">
-					<li>the printing and typesetting industry.</li>
-					<li> Lorem Ipsum has been the industry's standard</li>
-					<li>It has survived not only five centuries.</li>
-				</ul>
-				<p>
-					Compellingly embrace empowered e-business after user friendly intellectual capitals Interactively
-					actualize front-end processes with effectives convergenced Synergistically deliver performanced based
-					methods empowerment whereas distributed expertised efficiently enable enabled sources and cost effective
-					products completely ethical communities.
-				</p>
-			</div>
+			<h2 class="project">Project Information</h2>
+			<p>Distinctively re-engineer revolutionary meta service and premium architectures incubate intuitive
+				opportunities and real-time potentialities. Appropriately communicates once one technology after
+				plug-and-play networks.
+			</p>
+			<p>Quickly aggregates users and worldwides potentialities progressively plagiarize resource leveling
+				e-commerce through resource leveling cores competencies dramatically mesh low risk high yield alignments
+				before transparent e-tailers.
+			</p>
+			<ul class="printing">
+				<li>the printing and typesetting industry.</li>
+				<li>Lorem Ipsum has been the industry's standard</li>
+				<li>It has survived not only five centuries.</li>
+			</ul>
+			<p>
+				Compellingly embrace empowered e-business after user friendly intellectual capitals Interactively
+				actualize front-end processes with effectives convergenced Synergistically deliver performanced based
+				methods empowerment whereas distributed expertised efficiently enable enabled sources and cost effective
+				products completely ethical communities.
+			</p>
+			<ol class="printing">
+				<li>the printing and typesetting industry.</li>
+				<li> Lorem Ipsum has been the industry's standard</li>
+				<li>It has survived not only five centuries.</li>
+			</ol>
+			<p>
+				Compellingly embrace empowered e-business after user friendly intellectual capitals Interactively
+				actualize front-end processes with effectives convergenced Synergistically deliver performanced based
+				methods empowerment whereas distributed expertised efficiently enable enabled sources and cost effective
+				products completely ethical communities.
+			</p>
 		</div>
 
 		<!-- ==========================3-rd part========================== -->
 
 		<div class="india-block">
-			<img class="image-restange" src="img/21.jpg" alt="restange">
-			<div class="clothing-text">
+
+			<div class="india-text">
 				<h2 class="clothing-title">
 					Clothing for Women Online in India
 				</h2>
 				<h3 class="clothing-subtitle">
 					Reexplore Women's Clothing Collection Online at Euphoria
 				</h3>
-				<p>
-					Women's Clothing – Are you searching for the best website to buy Clothing for Women online in India?
-					Well, your search for the coolest and most stylish womens clothing ends here. From trendy Casual
-					Womens
-					Wear Online shopping to premium quality cotton women's apparel, <span class="euphoria">Euphoria</span>
-					has closet of Women Collection
-					covered with the latest and best designs of Women's Clothing Online.
-				</p>
-				<p>
-					Our collection of clothes for women will make you the trendsetter with an iconic resemblance of choice
-					in
-					Womens Wear.
-				</p>
+				<div class="clothing-text">
+					<p>
+						Women's Clothing – Are you searching for the best website to buy Clothing for Women online in India?
+						Well, your search for the coolest and most stylish womens clothing ends here. From trendy Casual
+						Womens
+						Wear Online shopping to premium quality cotton women's apparel, <span class="euphoria">Euphoria</span>
+						has closet of Women Collection
+						covered with the latest and best designs of Women's Clothing Online.
+					</p>
+					<p>
+						Our collection of clothes for women will make you the trendsetter with an iconic resemblance of choice
+						in
+						Womens Wear.
+					</p>
+				</div>
 				<h3 class="clothing-subtitle">
 					One-Stop Destination to Shop Every Clothing for Women: Euphoria
 				</h3>
-				<p>
-					Today, Clothing for Women is gaining more popularity above all. This is because gone are the days when
-					women were used to carrying uncomfortable fashion. Today, a lady looks prettier when she is in Casual
-					Womens Wear which is a comfortable outfit. Concerning this, <span class="euphoria">Euphoria</span> has a
-					big fat range of Stylish
-					Women's Clothing that would make her the winner wherever she goes.
-				</p>
-				<p>
-					Our collection of clothes for women will make you the trendsetter with an iconic resemblance of choice
-					in
-					Womens Wear. It is quite evident to say that there are very few Womens Clothing online stores where
-					you
-					can buy Western Wear for Women comprising the premium material and elegant design that you are always
-					seeking for. Basically,
-				</p>
+				<div class="clothing-text">
+					<p>
+						Today, Clothing for Women is gaining more popularity above all. This is because gone are the days when
+						women were used to carrying uncomfortable fashion. Today, a lady looks prettier when she is in Casual
+						Womens Wear which is a comfortable outfit. Concerning this, <span class="euphoria">Euphoria</span> has
+						a
+						big fat range of Stylish Women's Clothing that would make her the winner wherever she goes.
+					</p>
+					<p>
+						Our collection of clothes for women will make you the trendsetter with an iconic resemblance of choice
+						in
+						Womens Wear. It is quite evident to say that there are very few Womens Clothing online stores where
+						you
+						can buy Western Wear for Women comprising the premium material and elegant design that you are always
+						seeking for. Basically,
+					</p>
+				</div>
 				<h3 class="clothing-subtitle">
-					See More
+					<a href="#top" class="link">See More</a>
 				</h3>
+
 			</div>
 		</div>
+
 
 		<!-- ==============================4-th part============================= -->
 		<div class="jewels-block">
@@ -173,8 +177,12 @@
 					</p>
 				</div>
 				<div class="jewels-image">
-					<img class="second-image" src="img/002.jpg" alt="image">
-					<img class="first-image" src="img/001.jpg" alt="image">
+					<div class="second-wrapper">
+						<img class="second-image" src="img/002.jpg" alt="image">
+					</div>
+					<div class="first-wrapper">
+						<img class="first-image" src="img/001.jpg" alt="image">
+					</div>
 				</div>
 			</div>
 		</div>
